--- a/app/src/main/res/layout/vakit_widget_clock.xml
+++ b/app/src/main/res/layout/vakit_widget_clock.xml
@@ -8,7 +8,7 @@
         android:id="@+id/widget"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:src="@drawable/ic_launcher" />
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/center"
