bugfixes + more log reporting + moved notPrefs into a fragment...

--- a/app/src/main/res/layout/vakit_notpopup.xml
+++ b/app/src/main/res/layout/vakit_notpopup.xml
@@ -5,7 +5,7 @@
 
     <view
         android:id="@+id/img"
-        class="com.metinkale.prayerapp.vakit.NotificationPopup$MyView"
+        class="com.metinkale.prayerapp.vakit.fragments.NotificationPopup$MyView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
