--- a/app/src/main/res/layout/vakit_main.xml
+++ b/app/src/main/res/layout/vakit_main.xml
@@ -31,12 +31,12 @@
             android:textSize="18sp"
             android:visibility="gone" />
 
-        <android.support.v4.view.ViewPager
+        <com.metinkale.prayerapp.custom.LockableViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_below="@+id/holyday"></android.support.v4.view.ViewPager>
+            android:layout_below="@+id/holyday"></com.metinkale.prayerapp.custom.LockableViewPager>
 
 
         <TextView
