--- a/app/src/main/res/layout/vakit_notprefs.xml
+++ b/app/src/main/res/layout/vakit_notprefs.xml
@@ -1,20 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    tools:context="com.metinkale.prayerapp.vakit.NotificationPrefs">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:orientation="vertical"
+              android:background="#ffffff"
+              tools:context="com.metinkale.prayerapp.vakit.fragments.NotificationPrefs">
 
     <Switch
-        android:id="@+id/ongoing"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:text="@string/ongoingnoti" />
+            android:id="@+id/ongoing"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:text="@string/ongoingnoti"/>
 
     <ExpandableListView
-        android:id="@+id/expandableListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ExpandableListView>
+            android:id="@+id/expandableListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ExpandableListView>
 
 </LinearLayout>
