--- a/app/src/main/res/layout/vakit_fragment.xml
+++ b/app/src/main/res/layout/vakit_fragment.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#ffffff"
-                android:id="@+id/fragRoot"
-                tools:ignore="PxUsage">
+<android.support.percent.PercentRelativeLayout
+        android:background="#ffffff"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/fragRoot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true">
 
     <TextView
             android:id="@+id/kerahat"
@@ -19,145 +22,171 @@
             android:textSize="18sp"
             android:visibility="gone"/>
 
-    <com.metinkale.prayerapp.custom.WeightedFloatLayout
-            android:id="@+id/weightedFloatLayout1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
+
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:id="@+id/date"
+            android:layout_alignParentTop="true"
+            app:layout_widthPercent="100%"
+            app:layout_heightPercent="7%"
+            android:layout_marginTop="30dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:lines="1"
+            android:textStyle="italic"/>
+
+
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:id="@+id/city"
+            android:layout_below="@id/date"
+            app:layout_widthPercent="100%"
+            app:layout_heightPercent="10%"
+            android:gravity="center"
+            android:fontFamily="sans-serif-light"
+            android:lines="1"/>
+
+
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/city"
+            android:id="@+id/hicri"
+            app:layout_widthPercent="100%"
+            app:layout_heightPercent="7%"
+            android:lines="1"
+            app:layout_marginBottomPercent="4%"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:textStyle="italic"/>
+
+
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/hicri"
+            android:id="@+id/imsak"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingLeft="50dp"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/imsak"/>
+
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/hicri"
+            android:id="@+id/imsaktime"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingRight="50dp"
+            android:text="00:00"
+            android:gravity="right"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/kerahat">
+            android:fontFamily="sans-serif-thin"/>
 
-        <View
-                android:layout_width="1000px"
-                android:layout_height="40px"/>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/imsak"
+            android:id="@+id/gunes"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingLeft="50dp"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/gunes"/>
 
-        <TextView
-                android:id="@+id/date"
-                android:layout_width="1000px"
-                android:layout_height="70px"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"
-                android:lines="1"
-                android:textStyle="italic"/>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/imsak"
+            android:id="@+id/gunestime"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingRight="50dp"
+            android:text="00:00"
+            android:gravity="right"
+            android:layout_alignParentRight="true"
+            android:fontFamily="sans-serif-thin"/>
 
-        <RelativeLayout
-                android:layout_width="1000px"
-                android:layout_height="100px">
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/gunes"
+            android:id="@+id/ogle"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingLeft="50dp"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/ogle"/>
 
-            <TextView
-                    android:id="@+id/city"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_centerInParent="true"
-                    android:layout_gravity="center"
-                    android:fontFamily="sans-serif-light"
-                    android:lines="1"/>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/gunes"
+            android:id="@+id/ogletime"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingRight="50dp"
+            android:text="00:00"
+            android:gravity="right"
+            android:layout_alignParentRight="true"
+            android:fontFamily="sans-serif-thin"/>
 
-            <ImageView
-                    android:id="@+id/gps"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_toRightOf="@id/city"
-                    android:adjustViewBounds="true"
-                    android:cropToPadding="true"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="5dp"
-                    android:paddingTop="10dp"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/ic_gps"
-                    android:visibility="gone"/>
-        </RelativeLayout>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/ogle"
+            android:id="@+id/ikindi"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingLeft="50dp"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/ikindi"/>
 
-        <TextView
-                android:id="@+id/hicri"
-                android:layout_width="1000px"
-                android:layout_height="70px"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"
-                android:textStyle="italic"/>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/ogle"
+            android:id="@+id/ikinditime"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingRight="50dp"
+            android:text="00:00"
+            android:gravity="right"
+            android:layout_alignParentRight="true"
+            android:fontFamily="sans-serif-thin"/>
 
-        <View
-                android:layout_width="1000px"
-                android:layout_height="40px"/>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/ikindi"
+            android:id="@+id/aksam"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingLeft="50dp"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/aksam"/>
 
-        <TextView
-                android:id="@+id/imsak"
-                style="@style/vakit_names"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/imsak"/>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:id="@+id/aksamtime"
+            android:layout_below="@id/ikindi"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingRight="50dp"
+            android:text="00:00"
+            android:gravity="right"
+            android:layout_alignParentRight="true"
+            android:fontFamily="sans-serif-thin"/>
 
-        <TextView
-                android:id="@+id/imsaktime"
-                style="@style/vakit_times"
-                android:fontFamily="sans-serif-thin"/>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/aksam"
+            android:id="@+id/yatsi"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingLeft="50dp"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/yatsi"/>
 
-        <TextView
-                android:id="@+id/gunes"
-                style="@style/vakit_names"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/gunes"/>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/aksam"
+            android:id="@+id/yatsitime"
+            app:layout_widthPercent="50%"
+            app:layout_heightPercent="8%"
+            android:paddingRight="50dp"
+            android:text="00:00"
+            android:gravity="right"
+            android:layout_alignParentRight="true"
+            android:fontFamily="sans-serif-thin"/>
 
-        <TextView
-                android:id="@+id/gunestime"
-                style="@style/vakit_times"
-                android:fontFamily="sans-serif-thin"/>
 
-        <TextView
-                android:id="@+id/ogle"
-                style="@style/vakit_names"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/ogle"/>
+    <com.metinkale.prayerapp.custom.AutoResizeTextView
+            android:layout_below="@id/yatsi"
+            android:id="@+id/countdown"
+            app:layout_widthPercent="100%"
+            app:layout_heightPercent="8%"
+            app:layout_marginTopPercent="4%"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"/>
 
-        <TextView
-                android:id="@+id/ogletime"
-                style="@style/vakit_times"
-                android:fontFamily="sans-serif-thin"/>
-
-        <TextView
-                android:id="@+id/ikindi"
-                style="@style/vakit_names"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/ikindi"/>
-
-        <TextView
-                android:id="@+id/ikinditime"
-                style="@style/vakit_times"
-                android:fontFamily="sans-serif-thin"/>
-
-        <TextView
-                android:id="@+id/aksam"
-                style="@style/vakit_names"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/aksam"/>
-
-        <TextView
-                android:id="@+id/aksamtime"
-                style="@style/vakit_times"
-                android:fontFamily="sans-serif-thin"/>
-
-        <TextView
-                android:id="@+id/yatsi"
-                style="@style/vakit_names"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/yatsi"/>
-
-        <TextView
-                android:id="@+id/yatsitime"
-                style="@style/vakit_times"
-                android:fontFamily="sans-serif-thin"/>
-
-        <View
-                android:layout_width="1000px"
-                android:layout_height="40px"/>
-
-        <TextView
-                android:id="@+id/countdown"
-                android:layout_width="1000px"
-                android:layout_height="80px"
-                android:fontFamily="sans-serif-light"
-                android:gravity="center"/>
-    </com.metinkale.prayerapp.custom.WeightedFloatLayout>
 
     <ImageView
             android:id="@+id/source2"
@@ -191,4 +220,5 @@
             android:fontFamily="sans-serif-light"
             android:textColor="#ffffff"/>
 
-</RelativeLayout>
+</android.support.percent.PercentRelativeLayout>
+
