--- a/app/src/main/res/layout/vakit_fragment.xml
+++ b/app/src/main/res/layout/vakit_fragment.xml
@@ -189,28 +189,30 @@
 
 
     <ImageView
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
             android:id="@+id/source2"
-            android:layout_width="60dp"
-            android:layout_height="60dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/kerahat"
             android:layout_marginLeft="5dip"
             android:layout_marginRight="5dip"
             android:layout_marginTop="5dp"
-            android:contentDescription="@string/vakit"
-            android:scaleType="fitEnd"/>
+            android:contentDescription="@string/vakit"/>
 
     <ImageView
+            android:adjustViewBounds="true"
+            android:cropToPadding="true"
             android:id="@+id/source1"
-            android:layout_width="60dp"
-            android:layout_height="60dip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/kerahat"
             android:layout_marginLeft="5dip"
             android:layout_marginRight="5dip"
             android:layout_marginTop="5dp"
-            android:contentDescription="@string/vakit"
-            android:scaleType="fitStart"/>
+            android:contentDescription="@string/vakit"/>
 
     <View
             android:layout_width="match_parent"
