fixed time load/save

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,6 +13,24 @@
 
 
     <string-array name="tz_correct" translatable="false">
+        <item>+12</item>
+        <item>+11.5</item>
+        <item>+11</item>
+        <item>+10.5</item>
+        <item>+10</item>
+        <item>+9.5</item>
+        <item>+9</item>
+        <item>+8.5</item>
+        <item>+8</item>
+        <item>+7.5</item>
+        <item>+7</item>
+        <item>+6.5</item>
+        <item>+6</item>
+        <item>+5.5</item>
+        <item>+5</item>
+        <item>+5.5</item>
+        <item>+5</item>
+        <item>+4.5</item>
         <item>+4</item>
         <item>+3.5</item>
         <item>+3</item>
@@ -30,6 +48,22 @@
         <item>-3</item>
         <item>-3.5</item>
         <item>-4</item>
+        <item>-4.5</item>
+        <item>-5</item>
+        <item>-5.5</item>
+        <item>-6</item>
+        <item>-6.5</item>
+        <item>-7</item>
+        <item>-7.5</item>
+        <item>-8</item>
+        <item>-8.5</item>
+        <item>-9</item>
+        <item>-9.5</item>
+        <item>-10</item>
+        <item>-10.5</item>
+        <item>-11</item>
+        <item>-11.5</item>
+        <item>-12</item>
     </string-array>
 
     <string-array name="hijri_fix_mins" translatable="false">
