--- a/app/src/main/res/layout/vakit_imsakiye.xml
+++ b/app/src/main/res/layout/vakit_imsakiye.xml
@@ -1,68 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
 
-        <TextView
+    <TextView
             android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:lines="1" />
+            android:lines="1"/>
 
-        <TextView
+    <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:lines="1" />
+            android:lines="1"/>
 
-        <TextView
+    <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:lines="1" />
+            android:lines="1"/>
 
-        <TextView
+    <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:lines="1" />
+            android:lines="1"/>
 
-        <TextView
+    <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:lines="1" />
+            android:lines="1"/>
 
-        <TextView
+    <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:lines="1" />
+            android:lines="1"/>
 
-        <TextView
+    <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
-            android:lines="1" />
+            android:lines="1"/>
 
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
