--- a/app/src/main/res/layout/kaza_main.xml
+++ b/app/src/main/res/layout/kaza_main.xml
@@ -351,4 +351,59 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"/>
     </RelativeLayout>
+
+    <RelativeLayout
+            android:background="#ffffff"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:layout_weight="1"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp">
+
+
+        <ImageView
+                android:tint="@color/colorPrimaryDark"
+                android:id="@id/minus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/text"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_remove_circle_white_48dp"/>
+
+        <ImageView
+                android:tint="@color/colorPrimaryDark"
+                android:id="@id/plus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/minus"
+                android:layout_alignBottom="@id/minus"
+                android:layout_alignParentRight="true"
+                android:src="@drawable/ic_add_circle_white_48dp"/>
+
+        <EditText
+                android:id="@id/nr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@id/minus"
+                android:layout_alignBottom="@id/minus"
+                android:layout_gravity="center"
+                android:layout_toLeftOf="@id/plus"
+                android:layout_toRightOf="@id/minus"
+                android:ems="10"
+                android:gravity="center"
+                android:inputType="number"/>
+
+        <TextView
+                android:id="@id/text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"/>
+    </RelativeLayout>
 </LinearLayout>
