--- a/app/src/main/res/layout/vakit_notprefs.xml
+++ b/app/src/main/res/layout/vakit_notprefs.xml
@@ -76,7 +76,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -88,7 +88,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
 
         <LinearLayout
@@ -117,7 +117,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
                 android:background="#ffffff"
                 android:id="@+id/sabahExpanded"
@@ -128,7 +128,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -156,7 +156,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -168,7 +168,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -196,7 +196,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -208,7 +208,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -236,7 +236,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -248,7 +248,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -275,7 +275,7 @@
                     android:layout_height="wrap_content"/>
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -287,7 +287,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -314,7 +314,7 @@
                     android:layout_height="wrap_content"/>
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -326,7 +326,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
 
         <TextView
@@ -365,7 +365,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -377,7 +377,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
 
         <LinearLayout
@@ -406,7 +406,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -418,7 +418,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -446,7 +446,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -458,7 +458,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -486,7 +486,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -499,7 +499,7 @@
                 >
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -527,7 +527,7 @@
         </LinearLayout>
 
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
 
                 android:background="#ffffff"
@@ -539,7 +539,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -566,7 +566,7 @@
                     android:layout_height="wrap_content"/>
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
                 android:background="#ffffff"
                 android:id="@+id/eaksamExpanded"
@@ -577,7 +577,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
 
 
@@ -610,7 +610,7 @@
                     android:layout_height="wrap_content"/>
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout android:orientation="horizontal"
                 android:visibility="gone"
                 android:background="#ffffff"
                 android:id="@+id/eyatsiExpanded"
@@ -621,7 +621,7 @@
                 android:padding="10dp">
 
             <include layout="@layout/vakit_notprefs_item"/>
-        </RelativeLayout>
+        </LinearLayout>
 
 
         <View
